--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+time = { version = "0.3.17", features = ["formatting", "serde", "parsing"] }
 clap = { version = "4.1.4", features = ["derive"] }
 csv = "1.1.6"
 hound = "3.5.0"
 once_cell = "1.17.0"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 whisper-rs = { git = "https://github.com/tazz4843/whisper-rs.git", rev = "6156a046286101c91b866a9d04b7f845a6cef3f7"}
